[tool.poetry]
name = 'wh00t_server'
version = '1.2.1'
description = 'Simple python LAN chat server'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']
license = 'GPL-3.0-or-later'

[tool.poetry.dependencies]
python = '~3.10'
python-dotenv = '^1.0.0'
wh00t-core = {git = 'https://github.com/roboto84/wh00t_core.git', tag = 'v0.5.2'}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
